Resolve sidenav border-radius + select input height when search are not visible

--- a/projects/sparkle-ui/styles/components/sparkle-select.component.scss
+++ b/projects/sparkle-ui/styles/components/sparkle-select.component.scss
@@ -30,6 +30,7 @@ $spkSelect: false !default;
         opacity: 0;
         width: 0;
         height: 0;
+        position: absolute;
       }
     }
 
@@ -60,6 +61,7 @@ $spkSelect: false !default;
           min-width: min-content;
           field-sizing: content;
           font: var(--paragraph-30);
+          position: relative;
         }
 
         textarea {
