--- a/projects/sparkle-ui/styles/components/sparkle-sidenav.component.scss
+++ b/projects/sparkle-ui/styles/components/sparkle-sidenav.component.scss
@@ -61,6 +61,8 @@ $spkSidenav: true !default;
     }
 
     &.simple {
+      border-radius: 0;
+
       .main-wrap {
         padding: 0;
 
